# twenty-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/twenty_mcp_server/: __init__.py  client.py  config.py  graphql_client.py  server.py
src/twenty_mcp_server/tools/: __init__.py  companies.py  metadata.py  notes.py  opportunities.py  people.py  tasks.py
tests/: test_server.py
